--- a/ansible_tower_aws/roles/subscription_manager/tasks/subscribe.yml
+++ b/ansible_tower_aws/roles/subscription_manager/tasks/subscribe.yml
@@ -121,7 +121,7 @@
   block:
   - name: Check to see if requisite repos are already enabled 
     become: yes
-    shell: subscription-manager repos --list-enabled | egrep 'rhel-8-for-x86_64-baseos-rpms|rhel-8-for-x86_64-appstream-rpms|jb-eap-7.2-for-rhel-8-x86_64-rpms' | wc -l
+    shell: subscription-manager repos --list-enabled | egrep 'rhel-8-for-x86_64-baseos-rpms|rhel-8-for-x86_64-appstream-rpms' | wc -l
     register: smr_result
     ignore_errors: True
     tags:
@@ -134,7 +134,7 @@
       - rhel
   
   - name: Enable the requisite rhel8 repos
-    shell: subscription-manager repos --enable="rhel-8-for-x86_64-baseos-rpms" --enable="rhel-8-for-x86_64-appstream-rpms" --enable="jb-eap-7.2-for-rhel-8-x86_64-rpms"
+    shell: subscription-manager repos --enable="rhel-8-for-x86_64-baseos-rpms" --enable="rhel-8-for-x86_64-appstream-rpms" 
 #    shell: subscription-manager repos --enable="rhel-7-server-rpms" --enable="rhel-7-server-extras-rpms" --enable="rhel-7-server-optional-rpms" --enable="jb-eap-7.1-for-rhel-7-server-rpms" --enable="rhel-server-rhscl-7-rpms" #--enable="rhel-7-server-ose-3.4-rpms"
     when: smr_result.stdout != "3"
     tags:
